objects/ASI_CRM_ActualOfftakeHeader__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_All_Offtakes_Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Offtakes Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Book_ID__c</fullName>
        <label>Book ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Calculated_Payment_Status__c</fullName>
        <label>Calculated Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Document_ID__c</fullName>
        <label>Document ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_From_Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Wholesaler</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Actual Offtake Header (From Wholesaler)</relationshipLabel>
        <relationshipName>Actual_Offtake_Header1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice_Month__c</fullName>
        <label>Invoice Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Unlock_Trail__c</fullName>
        <label>Unlock Trail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month_Number__c</fullName>
        <formula>MONTH(ASI_CRM_OfftakeDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month__c</fullName>
        <formula>TEXT( MONTH(ASI_CRM_OfftakeDate__c) )</formula>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_OfftakeDate__c</fullName>
        <label>Offtake Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>contains</operation>
                <value>Outlet</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Actual Offtake Header</relationshipLabel>
        <relationshipName>Actual_Offtake_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_ToOutlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Outlet</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Actual Offtake Header</relationshipLabel>
        <relationshipName>Actual_Offtake_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Upload_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Upload_Log__c</fullName>
        <label>Upload Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Wholesaler_Code_Uploaded__c</fullName>
        <label>Wholesaler Code (Uploaded)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>contains</operation>
                <value>Wholesaler</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Actual Offtake Header (Wholesaler)</relationshipLabel>
        <relationshipName>Actual_Offtake_Header1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Year_Number__c</fullName>
        <formula>YEAR(ASI_CRM_OfftakeDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Year__c</fullName>
        <formula>TEXT(YEAR(ASI_CRM_OfftakeDate__c))</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Actual Offtake Header</label>
    <listViews>
        <fullName>ASI_CRM_MY_Actual_Offtake_Header</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Invoice_Month__c</columns>
        <columns>ASI_CRM_OfftakeDate__c</columns>
        <columns>ASI_CRM_ToOutlet__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Calculated_Payment_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_MY_Unlock_Trail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_ActualOfftakeHeader__c.ASI_CRM_MY_ActualOfftakeHeader,ASI_CRM_ActualOfftakeHeader__c.ASI_CRM_MY_Actual_Offtake_Header_Read_Only</value>
        </filters>
        <label>MY - Actual Offtake Header</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_Actual_Offtake_Header_Own_by_me</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Invoice_Month__c</columns>
        <columns>ASI_CRM_OfftakeDate__c</columns>
        <columns>ASI_CRM_ToOutlet__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Calculated_Payment_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_MY_Unlock_Trail__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_ActualOfftakeHeader__c.ASI_CRM_MY_ActualOfftakeHeader,ASI_CRM_ActualOfftakeHeader__c.ASI_CRM_MY_Actual_Offtake_Header_Read_Only</value>
        </filters>
        <label>MY - Actual Offtake Header - Own by me</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_PH_Actual_Offtake_Upload_Success</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_Confirmed__c</columns>
        <columns>ASI_CRM_All_Offtakes_Removed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_ActualOfftakeHeader__c.ASI_CRM_PH_Actual_Offtake_Header_Upload_Log</value>
        </filters>
        <filters>
            <field>ASI_CRM_Upload_Failed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All PH Actual Offtake Upload Success</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_PH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_SG_Actual_Offtake_Header</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_From_Wholesaler__c</columns>
        <columns>ASI_CRM_Wholesaler_Code_Uploaded__c</columns>
        <columns>ASI_CRM_Confirmed__c</columns>
        <columns>ASI_CRM_All_Offtakes_Removed__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_ActualOfftakeHeader__c.ASI_CRM_SG_Actual_Offtake_Header</value>
        </filters>
        <label>All SG Actual Offtake Header</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>ASI_SG</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_SG_Actual_Offtake_Upload_Failed</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ASI_CRM_Upload_Log__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_ActualOfftakeHeader__c.ASI_CRM_SG_Actual_Offtake_Header_Upload_Log</value>
        </filters>
        <filters>
            <field>ASI_CRM_Upload_Failed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All SG Actual Offtake Upload Failed</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TH_Actual_Offtake_Header</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Book_ID__c</columns>
        <columns>ASI_CRM_Document_ID__c</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_Verified__c</columns>
        <columns>ASI_CRM_OfftakeDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_ActualOfftakeHeader__c.ASI_CRM_TH_ActualOfftakeHeader</value>
        </filters>
        <label>TH Actual Offtake Header</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>ASI_TH_CRM</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TH_Actual_Offtake_Header_Unverified</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Book_ID__c</columns>
        <columns>ASI_CRM_Document_ID__c</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_OfftakeDate__c</columns>
        <columns>ASI_CRM_Verified__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_ActualOfftakeHeader__c.ASI_CRM_TH_ActualOfftakeHeader</value>
        </filters>
        <filters>
            <field>ASI_CRM_Verified__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ASI_CRM_Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>ASI_CRM_Month__c</field>
            <operation>equals</operation>
            <value>5</value>
        </filters>
        <label>TH Actual Offtake Header (Unverified)_PA</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_TH_CRM_Commercial_Analyst</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>OT-{00000000}</displayFormat>
        <label>Actual Offtake ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actual Offtake Header</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_ActualOfftakeHeader</fullName>
        <active>true</active>
        <label>ASI CRM MY Actual Offtake Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Actual_Offtake_Header_Read_Only</fullName>
        <active>true</active>
        <label>ASI CRM MY Actual Offtake Header Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_PH_Actual_Offtake_Header</fullName>
        <active>true</active>
        <label>ASI CRM PH Actual Offtake Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_PH_Actual_Offtake_Header_Upload_Log</fullName>
        <active>true</active>
        <label>ASI CRM PH Actual Offtake Header (Upload Log)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Actual_Offtake_Header</fullName>
        <active>true</active>
        <label>ASI CRM SG Actual Offtake Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Actual_Offtake_Header_Upload_Log</fullName>
        <active>true</active>
        <label>ASI CRM SG Actual Offtake Header (Upload Log)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_ActualOfftakeHeader</fullName>
        <active>true</active>
        <label>ASI CRM TH Actual Offtake Header</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_MY_DateChecking</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
$User.BypassVR__c != TRUE, 
CONTAINS(RecordType.DeveloperName, &apos;ASI_CRM_MY_&apos;), 
OR(ISNEW(),ISCHANGED(ASI_CRM_OfftakeDate__c)),
OR(OR(
 DAY(ASI_CRM_OfftakeDate__c) = 27,
 DAY(ASI_CRM_OfftakeDate__c) = 28,
 DAY(ASI_CRM_OfftakeDate__c) = 29,
 DAY(ASI_CRM_OfftakeDate__c) = 30,
 DAY(ASI_CRM_OfftakeDate__c) = 31
),
NOT(OR(AND(YEAR(ASI_CRM_OfftakeDate__c) = YEAR(TODAY()),MONTH(ASI_CRM_OfftakeDate__c) = MONTH(TODAY())),ASI_CRM_OfftakeDate__c &gt;=TODAY()))
))</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Only allow to enter current and future month offtake, (After cutoff should enter the offtake as next month)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_MY_DateChecking2</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
$User.BypassVR__c != TRUE, 
CONTAINS(RecordType.DeveloperName, &apos;ASI_CRM_MY_&apos;), 
OR(ISNEW(),ISCHANGED(ASI_CRM_OfftakeDate__c)), 
DAY(TODAY())&gt;=26,
OR(OR( 
DAY(ASI_CRM_OfftakeDate__c) = 27, 
DAY(ASI_CRM_OfftakeDate__c) = 28, 
DAY(ASI_CRM_OfftakeDate__c) = 29, 
DAY(ASI_CRM_OfftakeDate__c) = 30, 
DAY(ASI_CRM_OfftakeDate__c) = 31 
), 
ASI_CRM_OfftakeDate__c &lt; TODAY()) 
)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Only allow to enter the future month offtake.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_TH_Offtake_Verification_Checking</fullName>
        <active>true</active>
        <description>For TH CRM2, checks actual offtake header has wholesaler, and outlet before verification.</description>
        <errorConditionFormula>AND( RecordType.DeveloperName = &apos;ASI_CRM_TH_ActualOfftakeHeader&apos;, OR(ISBLANK(ASI_CRM_Wholesaler__c ) , ISBLANK( ASI_CRM_Outlet__c ) ), ASI_CRM_Verified__c = true, ISCHANGED(ASI_CRM_Verified__c) )</errorConditionFormula>
        <errorMessage>Actual Offtake cannot be verified since &apos;Wholesaler&apos;, or &apos;Outlet&apos; is blank.</errorMessage>
    </validationRules>
</CustomObject>